using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace UltraMan
{
    public static class AnimationParameters
    {
        public static string OnPhaseTrigger => "OnPhase";

        public static string IsShootingBool => "IsShooting";

        public static string OnDeathTrigger => "OnDeath";
    }
}

